# zh2en-translate

./: Cargo.toml  Readme.md
.github/workflows/: cargo_release.yml
src/: config.rs  main.rs  net.rs  rpc.rs  translate.rs
src/nlp/: mod.rs  resource.rs
